@@ -1,4 +1,4 @@
-.\"	$NetBSD: module.9,v 1.21 2010/08/25 06:45:35 jnemeth Exp $
+.\"	$NetBSD: module.9,v 1.22 2010/11/28 00:26:38 jnemeth Exp $
 .\"
 .\" Copyright (c) 2010 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd August 25, 2010
+.Dd November 27, 2010
 .Dt MODULE 9
 .Os
 .Sh NAME
@@ -199,7 +199,7 @@ If a module is being loaded from the file system, and the
 .Dv MODCTL_NO_PROP
 flag is not set, the system searches for a file with the same name as the
 module file, but with the suffix
-.Dq Pa .prop .
+.Dq Pa .plist .
 If this file is found, the prop_dictionary it contains is loaded and
 merged with the prop_dictionary from the
 .Fa props
